# tdse-1d

./: README.md  pyproject.toml  run_example.sh
examples/: run_antisymmetric_bump.py  run_symmetric_bump.py  run_unperturbed.py
outputs/symmetric/: tdse_symmetric_energies.json
src/tdse/: __init__.py  grid.py  main.py  observables.py  plot.py  potentials.py  solver.py
src/tdse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_energy_levels.py  test_fd_accuracy.py  test_time_propagation.py
